# roleplaybot

./: .commit-check.yml  .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: client-cloudrun.yml  commit-check.yml  ruff.yml  server-cloudrun.yml
client/: Dockerfile  env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/: AutoScrollToBottom.tsx  BotReadyAudio.tsx  ChatControls.tsx  ChatMessage.tsx  ChatMessages.tsx  ClientPage.tsx  CodeBlock.tsx  ConversationList.tsx  ConversationListItem.tsx  CopyToClipboard.tsx  DeleteConversationModal.tsx  ErrorBoundary.tsx  ErrorPage.tsx  ExpiryCountdown.tsx  Layout.tsx  LiveMessages.tsx  Navbar.tsx  PageTransitionLink.tsx  QueryClientProvider.tsx  ScenarioConfig.tsx  (+5 more)
docs/: pull_request_template.md
server/: .dockerignore  Dockerfile  env.example  pyproject.toml  requirements.txt  sesame.py
server/bots/: persistent_context.py  requirements.txt  rtvi.py  rtvi_actions.py  rtvi_services.py  scenario_agent.py  summarize.py  types.py
server/bots/http/: bot.py  frame_serializer.py
server/bots/webrtc/: bot.py  bot_pipeline.py  bot_pipeline_runner.py
server/common/: __init__.py  config.py  config_models.py  database.py  models.py  prompt_models.py  scenario_models.py
server/core/: exceptions.py  loggers.py
server/services/: __init__.py  config_service.py  prompt_service.py
server/webapp/: __init__.py  main.py  requirements.txt
server/webapp/api/: __init__.py  bots.py  conversations.py  scenario.py
(+24 files in other folders)
